--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,9 +60,12 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.45f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\ObstacleManager.cs" />
     <Compile Include="Assets\playerCollision.cs" />
     <Compile Include="Assets\playerScore.cs" />
+    <Compile Include="Assets\ObstacleDestroyer.cs" />
     <Compile Include="Assets\coinSpawner.cs" />
+    <Compile Include="Assets\Obstacle.cs" />
     <Compile Include="Assets\playerMovement.cs" />
     <Compile Include="Assets\coinCollision.cs" />
   </ItemGroup>
